fix: IntelliJ compile errors + session summary
- SnippetListPanel: capture editor as effectively final for lambda
- DevPulseSettingsConfigurable: List.of() -> Arrays.asList() for Java 17
- AddBookmarkAction: use TextRange instead of LogicalPosition pair
- Add SESSION-SUMMARY-2026-04-08.md documenting VSIX + IntelliJ build

Closes compile errors found during IntelliJ plugin build.